# model-runtimes-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  example-env.sh  pyproject.toml  report.html
config-yaml/: modelcar_file.yaml
info/: deployment_info.txt  deployment_matrix.json  gpu_info.txt  models_info.json  supervisor_summary.txt
src/runtimes_dep_agent/: execute_agent.py  preflight.py
src/runtimes_dep_agent/agent/: llm_agent.py
src/runtimes_dep_agent/agent/specialists/: __init__.py  accelerator_specialist.py  config_specialist.py  decision_specialist.py  qa_specialist.py
src/runtimes_dep_agent/config/: model_config.py
src/runtimes_dep_agent/report/: __init__.py  html_report.py
src/runtimes_dep_agent/utils/: path_utils.py
src/runtimes_dep_agent/validators/: __init__.py  accelerator_validator.py
